# rs-automation

./: .gitignore  AGENTS.md  Cargo.toml  readme.md
.cargo/: config.toml
automation/: Cargo.toml
automation/src/: actions.rs  input.rs  main.rs  page.rs  seat.rs  vision.rs  window.rs
automation/src/pipeline/: context.rs  default.rs  mod.rs  value.rs  wanda.rs
automation/src/pipeline/steps/: locate_seat.rs  mod.rs  scroll_then_ocr_loop.rs  select_date.rs
automation/src/pipeline/steps/primitive/: activate_window.rs  click_anchor.rs  click_ocr_match.rs  click_window_pos.rs  condition.rs  debug.rs  horizontal_scroll.rs  loop_count.rs  loop_until.rs  mod.rs  move_mouse.rs  retry.rs  scroll.rs  sequence.rs  sleep_ms.rs  text_match.rs  wait_page.rs  wait_template.rs
image-pre-cli/: Cargo.toml
image-pre-cli/src/: main.rs
image-proc/: Cargo.toml
image-proc/src/: lib.rs
ml/: Cargo.toml
ml/src/: dataset.rs  inference.rs  lib.rs  model.rs  training.rs
ocr/: Cargo.toml
ocr/src/: config.rs  engine.rs  lib.rs  result.rs
ocr/tests/: ocr_integration.rs
