[package]
name = "wanda-automation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
fs_extra = "1.3.0"
opencv = {workspace = true}
xcap = "0.7.1"
enigo = "0.1.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
ml = { path = "../ml" }
image_compat = { package = "image", version = "0.24", default-features = false }
image = "0.25"
ocr = { path = "../ocr" }
unicode-normalization = "0.1"
