[package]
name = "ml"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
burn = { version = "0.18.0", features = ["train", "wgpu", "metal", "autodiff", "ndarray"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
